# vcl_job_cards

./: CHANGELOG.md  CONTRIBUTING.md  README.md  TECHNICAL_BREAKDOWN.md  license.txt  pyproject.toml
vcl_job_cards/: hooks.py  modules.txt
vcl_job_cards/job_card_tracking/doctype/colour_of_parts/: colour_of_parts.json  colour_of_parts.py
vcl_job_cards/job_card_tracking/doctype/customer_product_specification/: customer_product_specification.js  customer_product_specification.json  customer_product_specification.py
vcl_job_cards/job_card_tracking/doctype/dies/: dies.json  dies.py
vcl_job_cards/job_card_tracking/doctype/dies_order/: dies_order.json  dies_order.py
vcl_job_cards/job_card_tracking/doctype/job_card___computer_paper/: job_card___computer_paper.js
vcl_job_cards/job_card_tracking/doctype/job_card_computer_paper/: job_card_computer_paper.js  job_card_computer_paper.json  job_card_computer_paper.py
vcl_job_cards/job_card_tracking/doctype/job_card_label/: job_card_label.js  job_card_label.json  job_card_label.py  test_job_card_label.py
vcl_job_cards/job_card_tracking/doctype/production_actual_line/: production_actual_line.json  production_actual_line.py
vcl_job_cards/job_card_tracking/doctype/production_entry/: production_entry.js  production_entry.json  production_entry.py
vcl_job_cards/job_card_tracking/doctype/production_planning_line/: production_planning_line.json  production_planning_line.py
vcl_job_cards/job_card_tracking/doctype/production_sheet/: production_sheet.js  production_sheet.json  production_sheet.py
