[project]
name = "vcl_job_cards"
version = "0.0.1"
description = "Job Card Tracking System for Vimit Converters Limited"
authors = [
    {name = "Vimit Converters Limited", email = "tanuj@vimitconverters.com"}
]
requires-python = ">=3.10"
dependencies = [
    "frappe"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project.entry-points."frappe"]
vcl_job_cards = "vcl_job_cards"
